# energy-agent_agent

./: LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
backend/app/: api.py  energy_agents.py  pyproject.toml
src/: App.tsx  main.tsx
src/components/: AIRecommendations.tsx  Dashboard.tsx  EnergyChart.tsx  Marketplace.tsx  Navigation.tsx  PredictedUsage.tsx  TradePanel.tsx  UserSurvey.tsx  WalletContext.tsx
src/components/ui/: WalletConnectButton.tsx
src/integrations/supabase/: client.ts  types.ts
src/lib/: energyPrediction.ts  mockData.ts
src/pages/: Index.tsx  SignIn.tsx
src/services/: energyService.ts
supabase/: config.toml
